FindBugs fixes Test window progress